added df for genderTotal

--- a/Walmart.ipynb
+++ b/Walmart.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "67d53bb1-6c99-4a5c-b407-81af72577556",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "id": "12b35bcd-7e79-47cb-b930-bedcac51e53e",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "4                         4+               0                 8      7969  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "fa160cac-0ca1-4fba-ab21-32a73e6e02a0",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "id": "74d100fe-5d52-44e8-b60a-d8a2c2213607",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "03d9d9a7-c600-45eb-9b54-11ba06c317e5",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
        "M       9437.526040  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,6 +410,105 @@
     "#calculate average purchase price by Age group\n",
     "genderGroupAge = data.groupby('Age').mean('Purchase')\n",
     "genderGroupAge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e79b41a8-50bf-4cd5-92ce-e45b062daca3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Gender\n",
+       "F    1186232642\n",
+       "M    3909580100\n",
+       "Name: Purchase, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genderTotal = data.groupby('Gender')['Purchase'].sum()\n",
+    "genderTotal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2cf8b8ab-cbc7-4596-bdaa-ec0850fde9ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Totals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>F</td>\n",
+       "      <td>1186232642</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M</td>\n",
+       "      <td>3909580100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Gender      Totals\n",
+       "0      F  1186232642\n",
+       "1      M  3909580100"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "genderTotal_df = genderTotal.reset_index()\n",
+    "genderTotal_df.columns = ['Gender', 'Totals']\n",
+    "\n",
+    "genderTotal_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d043617-16c1-4405-ae4d-30fa41842e44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genderTotal = data.groupby()"
    ]
   },
   {
@@ -792,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
