finished % of sales cell for Gender

--- a/Walmart.ipynb
+++ b/Walmart.ipynb
@@ -433,8 +433,8 @@
     }
    ],
    "source": [
-    "genderTotal = data.groupby('Gender')['Purchase'].sum()\n",
-    "genderTotal"
+    "#genderTotal = data.groupby('Gender')['Purchase'].sum()\n",
+    "#genderTotal"
    ]
   },
   {
@@ -495,10 +495,36 @@
     }
    ],
    "source": [
+    "# Total sales per gender\n",
     "genderTotal_df = genderTotal.reset_index()\n",
     "genderTotal_df.columns = ['Gender', 'Totals']\n",
     "\n",
     "genderTotal_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2a597c6f-78e7-4e2c-97dd-173b8b79b85c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Gender      Totals  Percentage\n",
+      "0      F  1186232642   23.278576\n",
+      "1      M  3909580100   76.721424\n"
+     ]
+    }
+   ],
+   "source": [
+    "# % of sales\n",
+    "percentageTotal = genderTotal_df['Totals'].sum()\n",
+    "\n",
+    "genderTotal_df['Percentage'] = (genderTotal_df['Totals'] / percentageTotal) * 100\n",
+    "\n",
+    "print(genderTotal_df)\n"
    ]
   },
   {
